--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -11,3 +11,38 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.traffic-light {
+background-color: black;
+height: 300px;
+width: 150px;
+margin: auto;
+border-radius: 20px;
+margin-top: 50px;
+}
+
+.red-light {
+    background: red;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-left: 28px;
+}
+.yellow-light {
+    background: yellow;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-left: 28px;
+
+}
+
+.green-light {
+    background: green;
+    border-radius: 50%;
+    width: 100px;
+    height: 100px;
+    margin-left: 28px;
+
+}
+.onState {
+    box-shadow: 0px 0px 20px rgba(245, 243, 39, 0.93);}
